tests/snapshots/presenter_pinned__origin_cross_worktree.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌r─────────────────┐┌active.rs──────────────────────────────────────────────────────┐┌Pinned: [topic @ /worktrees/other[31m]─────────────────────────┐"
"│                  ││active notice                                                  ││PINNED                                                         │"
"│                  ││ACTIVE needle                                                  ││                                                               │"
"│                  ││active second row                                              ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"└──────────────────┘└─────────────────────────────────────────────────────────? help┘└───────────────────────────────────────────────────────────────┘"
