tests/snapshots/presenter_pinned__origin_named_branch.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌r─────────────────┐┌active.rs──────────────────────────────────────────────────────┐┌Pinned: [feat/one @ /worktrees/feature]────────────────────────┐"
"│                  ││active notice                                                  ││PINNED                                                         │"
"│                  ││ACTIVE needle                                                  ││                                                               │"
"│                  ││active second row                                              ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"└──────────────────┘└─────────────────────────────────────────────────────────? help┘└───────────────────────────────────────────────────────────────┘"
