tests/snapshots/presenter_pinned__tree_hidden_two_preview.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌active.rs───────────────────────────────────────┐┌Pinned: [main @ /repo]──────────────────────────┐"
"│active notice                                   ││PINNED                                          │"
"│ACTIVE needle                                   ││                                                │"
"│active second row                               ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└──────────────────────────────────────────? help┘└────────────────────────────────────────────────┘"
